<resources>
    <string name="app_name">WOW-ITC</string>
    <string name="visit">Viisit</string>
    <string name="school_name">Enter School Name</string>
    <string name="name_of_the_person_contacted">Enter Name of Person Contacted</string>
    <string name="phone_no">Enter Mobile Number</string>
    <string name="mailid">Email ID</string>
    <string name="total_no_of_students">Total Number Of Students</string>
    <string name="note">Note</string>
    <string-array name="ngos">
        <item>Esree Foundations</item>
        <item>Samrthanam Trust for Disabled</item>
        <item>Academy of Gadhian Studies</item>
        <item>Moden Archtects Rural India</item>
        <item>NGO 1</item>
        <item>NGO 2</item>
        <item>Other</item>
    </string-array>
    <string-array name="cities">
        <item>Coimbatore</item>
        <item>Ooty</item>
        <item>Erode</item>
        <item>Tirupur</item>
        <item>Cochin</item>
        <item>Chennai</item>
        <item>Bangalore</item>
        <item>Hyderabad</item>
        <item>Andhrapradesh</item>
        <item>Tirupati</item>
        <item>Siddipet</item>
        <item>Warangal</item>
        <item>Mehboobnagar</item>
        <item>Sircilla</item>
        <item>Medak</item>
        <item>Palwancha</item>
        <item>BCM</item>
        <item>Kothagudum</item>
        <item>Delhi</item>
        <item>Muzzafarpur</item>
        <item>Chikmanglur</item>
        <item>Mysore</item>
        <item>City 1</item>
        <item>"City 2</item>
        <item>City 3</item>
        <item>City 4</item>
        <item>City 5</item>
        <item>City 6</item>
        <item>City 7</item>
        <item>AP1</item>
        <item>AP2</item>
        <item>AP3</item>
        <item>AP4</item>
        <item>AP5</item>
        <item>AP6</item>
        <item>AP7</item>
        <item>AP8</item>
        <item>AP9</item>
        <item>AP10</item>
        <item>AP11</item>
        <item>AP12</item>
        <item>AP13</item>
        <item>AP14</item>
        <item>AP15</item>
        <item>AP16</item>
        <item>AP17</item>
        <item>AP18</item>
        <item>AP19</item>
        <item>AP20</item>
        <item>AP21</item>
        <item>AP22</item>
        <item>AP23</item>
        <item>AP24</item>
        <item>AP25</item>
        <item>AP26</item>
        <item>AP27</item>
        <item>AP28</item>
        <item>AP29</item>
        <item>AP30</item>
        <item>AP31</item>
        <item>AP32</item>
        <item>AP33</item>
        <item>AP34</item>
        <item>AP35</item>
        <item>AP36</item>
        <item>AP37</item>
        <item>AP38</item>
        <item>AP39</item>
        <item>AP40</item>
        <item>Others - Please Specify</item>
    </string-array>
</resources>
