<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wow.itc.com.wow_itc.SchoolVisit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="Select NGO"
                android:textSize="20sp"/>

            <Spinner
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:id="@+id/spinner"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <TextView
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select CITY"
                android:textSize="20sp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:id="@+id/city" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <!-- Auto populate -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/area"
            android:hint="Area Visit"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ngoempname"
            android:hint="NGO employee name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/schoolname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/school_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/personcontacted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_person_contacted"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_no"
            android:id="@+id/phone"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/mailid"
            android:hint="@string/mailid"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studentstrength"
            android:inputType="number"
            android:hint="@string/total_no_of_students"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:id="@+id/notescvisit"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:layout_marginTop="4dp"
            android:id="@+id/submit"/>

    </LinearLayout>

</ScrollView>
